--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ kiwisolver==1.4.7
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
-numpy==1.22.4
+numpy>=1.23
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
